clusters/building-blocks/media/apps/readarr/app/readarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: media
  labels:
    app.kubernetes.io/name: readarr
  annotations:
    meta.helm.sh/release-name: media
    meta.helm.sh/release-namespace: media
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: readarr
  ports:
    - protocol: TCP
      port: 8787
      targetPort: 8787
