clusters/building-blocks/media/apps/readarr/app/readarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readarr
  namespace: media
  annotations:
    meta.helm.sh/release-name: media
    meta.helm.sh/release-namespace: media
  labels:
    app: readarr
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - kind: Rule
    match: Host(`readarr.home.${DOMAIN_NAME}`)
    priority: 10
    middlewares:
    - name: local-ipallowlist
      namespace: edge
    services:
    - kind: Service
      name: readarr
      namespace: media
      passHostHeader: true
      port: 80
      scheme: http
